# aquaregia

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  codecov.yml
.github/workflows/: ci.yml  coverage.yml
aquaregia-macros/: Cargo.toml
aquaregia-macros/src/: lib.rs
examples/: README.md  agent_minimal.rs  anthropic_prompt_caching.rs  anthropic_web_search.rs  basic_generate.rs  basic_stream.rs  google_generate.rs  mini_claude_code.rs  multimodal_image.rs  multimodal_pdf.rs  openai_compatible_custom.rs  prepare_hooks.rs  provider_selection_demo.rs  structured_streaming.rs  tools_max_steps.rs
scripts/: publish.sh
src/: agent.rs  axum_sse.rs  client.rs  error.rs  lib.rs  partial_json.rs  stream.rs  tool.rs  types.rs
src/model_adapters/: AGENTS.md  mod.rs  think_tag_parser.rs
src/model_adapters/anthropic/: mod.rs
src/model_adapters/google/: mod.rs
src/model_adapters/openai/: mod.rs
src/model_adapters/openai_compatible/: mod.rs
tests/: AGENTS.md  agent.rs  agent_edge.rs  axum_sse_tests.rs  cancellation.rs  client_builder.rs  error_mapping.rs  generate.rs  multimodal_file.rs  provider_options.rs  providers.rs  providers_deep.rs  stream.rs  tool_macro.rs  tools.rs
www/: .gitignore  mdx-components.js  next.config.mjs  package.json  pnpm-lock.yaml
www/app/: globals.css  layout.jsx  not-found.jsx  page.jsx  sitemap.js
www/app/[lang]/: layout.jsx  page.jsx
www/app/[lang]/blog/: layout.jsx  page.jsx
www/app/[lang]/blog/[...mdxPath]/: page.jsx
www/app/[lang]/blog/rss.xml/: route.js
www/app/[lang]/blog/tags/: page.jsx
www/app/[lang]/blog/tags/[tag]/: page.jsx
www/app/[lang]/docs/: layout.jsx
www/app/[lang]/docs/[[...mdxPath]]/: page.jsx
www/app/[lang]/search/: page.jsx
www/components/: pagefind-search.jsx
www/content/en/blog/: _meta.js  about.mdx
www/content/en/blog/posts/: nextra-site-build.mdx  v2-release.mdx
www/content/en/docs/: _meta.js  getting-started.mdx  index.mdx
www/content/en/docs/agent/: index.mdx
www/content/en/docs/clients/: index.mdx
www/content/en/docs/concepts/: index.mdx
www/content/en/docs/demos/: _meta.js  components.mdx  index.mdx
www/content/en/docs/errors/: index.mdx
www/content/en/docs/migration/: index.mdx
www/content/en/docs/synced/: examples.mdx  readme.mdx
www/content/en/docs/tools/: index.mdx
www/content/zh/blog/: _meta.js  about.mdx
www/content/zh/blog/posts/: nextra-site-build.mdx  v2-release.mdx
www/content/zh/docs/: _meta.js  getting-started.mdx  index.mdx
www/content/zh/docs/agent/: index.mdx
www/content/zh/docs/clients/: index.mdx
www/content/zh/docs/concepts/: index.mdx
www/content/zh/docs/demos/: _meta.js  components.mdx  index.mdx
www/content/zh/docs/errors/: index.mdx
www/content/zh/docs/migration/: index.mdx
www/content/zh/docs/synced/: examples.mdx  readme-cn.mdx
www/content/zh/docs/tools/: index.mdx
www/lib/: content-index.js  contracts.js  nextra-helpers.js  site-config.js
www/scripts/: sync-content.mjs
