[package]
name = "aquaregia"
version = "0.1.5"
edition = "2024"
description = "Provider-agnostic Rust toolkit for AI apps and agents."
license = "MIT"
readme = "README.md"
repository = "https://github.com/minorcell/aquaregia"
documentation = "https://docs.rs/aquaregia"

[lib]
name = "aquaregia"
path = "src/lib.rs"

[features]
default = ["openai", "anthropic"]
openai = []
anthropic = []
axum = ["dep:axum"]
telemetry = ["dep:tracing"]

[dependencies]
aquaregia-macros = { path = "aquaregia-macros", version = "0.1.5" }
async-stream = "0.3"
base64 = "0.22"
async-trait = "0.1"
axum = { version = "0.8", optional = true }
futures-core = "0.3"
futures-util = "0.3"
jsonschema = { version = "0.30", default-features = false }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1", optional = true }
url = "2.5"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
