[package]
name = "aquaregia"
version = "0.1.9"
edition = "2024"
description = "A single crate for building LLM-powered applications and agents across any provider."
license = "MIT"
readme = "README.md"
repository = "https://github.com/minorcell/aquaregia"
documentation = "https://docs.rs/aquaregia"
exclude = [
    ".gitignore",
    ".github/**",
    "scripts/**",
    "codecov.yml",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "README_CN.md",
    "tests/**",
    "examples/**",
    "**/AGENTS.md",
    "**/CLAUDE.md",
    "rust-toolchain.toml",
]

[lib]
name = "aquaregia"
path = "src/lib.rs"

[features]
telemetry = ["dep:tracing"]

[dependencies]

async-stream = "0.3"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
http = "1"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
