[package]
name = "aquaregia-macros"
version = "0.1.3"
edition = "2024"
description = "Procedural macros for the aquaregia crate."
license = "MIT"
repository = "https://github.com/minorcell/aquaregia"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
